--- a/Makefile_
+++ b/Makefile_
@@ -1,6 +1,6 @@
 
 all:
-	make LD_LIBRARY_PATH=../../install/lib LDFLAGS="-lncursesw -lterminfo -lunibilium" CFLAGS="-lncursesw -lterminfo -lunibilium -DHAVE_UNIBILIUM"
+	make LD_LIBRARY_PATH=../../install/lib LDFLAGS="-lncursesw -lterminfo -lunibilium" CFLAGS="-lncursesw -lterminfo -lunibilium -fPIE -fPIC -DHAVE_UNIBILIUM"
 
 
 install:
